Fix layout issues with create account modal
fixes  #4822

--- a/frontend/src/app/components/modals/create-account-modal/create-account-modal.less
+++ b/frontend/src/app/components/modals/create-account-modal/create-account-modal.less
@@ -7,6 +7,6 @@
     }
 
     editor > .editor-label {
-        width: 190px;
+        min-width: 190px;
     }
 }
